--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 
 :root {
-    --background: #151728;
+    --background: #37255a;
     ;
     --shadow: rgba(0, 0, 0, 0.1) 0px 3px 6px 0px, rgba(0, 0, 0, 0.08) 0px 1px 3px 0px;
 
